add wepage things

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
+title: wild solutions
+description: visualizations of wild solutions to the 2-dimensional Euler equations
 theme: jekyll-theme-cayman
